--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,6 @@
     <h2>titulo 3</h2>
     <p>paragrafo 1</p>
     <p>paragrafo 2</p>
-    <img src="" alt="">
+    <img src="file:///home/escola/%C3%81rea%20de%20Trabalho/vitrine-do-bem-gatos-Photo-by-Stratman.webp" alt="">
 </body>
 </html>
