--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> título </h1>
+    <h1> prova isabelli e amanda </h1>
 
     <p> parágrafo 1 <em> itálico </em> </p>
     <p> paragrafo 2 <strong> negrito </strong> </p>
